Compiler/tests/typing/bad/testfile-borrow_mut-8.rs

fn foo(x: &mut i32) { return; }
fn main() { let mut x : i32 = 42; foo(& x); return; }
